# LevelKeeper

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  cliff.toml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
config/: config.example.toml
docs/: architecture.md  operations.md  setup.md
levelkeeper/: __init__.py  __main__.py  archiver.py  config.py  imap_client.py  lockfile.py  logging_setup.py  mount_check.py  notifier.py  report.py  scheduler.py  state.py  storage.py
tests/: test_archiver.py  test_config.py  test_imap_client.py  test_lockfile.py  test_mount_check.py  test_notifier.py  test_report.py  test_scheduler.py  test_state.py  test_storage.py
